--- a/Web-dashboard/index.html
+++ b/Web-dashboard/index.html
@@ -1,1 +1,155 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BlueMetrics Dashboard</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <style>
+    body { 
+      background: linear-gradient(to right, #e0e0e0, #f5f5f5); 
+      font-family: Arial, sans-serif; 
+    }
+    .card { border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
+    .metric-value { font-size: 2rem; font-weight: bold; }
+    .metric-label { font-size: 0.9rem; color: #555; }
+    .status { font-weight: bold; }
+  </style>
+</head>
+<body>
+
+<div class="container py-4">
+  <div class="text-center mb-4">
+    <h2>💧 BlueMetrics</h2>
+    <p>Real-time Water Quality Monitoring</p>
+  </div>
+
+  <div class="row g-3 mb-4">
+    <div class="col-md-3">
+      <div class="card p-3 text-center">
+        <div id="ph-value" class="metric-value">--</div>
+        <div class="metric-label">pH Level</div>
+        <div id="ph-status" class="status">--</div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="card p-3 text-center">
+        <div id="temp-value" class="metric-value">--</div>
+        <div class="metric-label">Temperature</div>
+        <div id="temp-status" class="status">--</div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="card p-3 text-center">
+        <div id="turb-value" class="metric-value">--</div>
+        <div class="metric-label">Turbidity</div>
+        <div id="turb-status" class="status">--</div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="card p-3 text-center">
+        <div id="system-status" class="status">--</div>
+        <small id="last-updated">Last updated: --</small>
+      </div>
+    </div>
+  </div>
+
+  <div class="card p-3 mb-4">
+    <h5>Recent Water Quality Trends (Last 10 Readings)</h5>
+    <canvas id="trendChart" height="250"></canvas>
+  </div>
+</div>
+
+<script>
+const maxPoints = 10;
+const labels = [], phData = [], tempData = [], turbData = [];
+
+const ctx = document.getElementById('trendChart').getContext('2d');
+const trendChart = new Chart(ctx, {
+  type: 'line',
+  data: {
+    labels: labels,
+    datasets: [
+      { label: 'pH', data: phData, borderColor: 'blue', tension: 0.3, fill: false, pointBackgroundColor: [] },
+      { label: 'Temperature (°C)', data: tempData, borderColor: 'orange', tension: 0.3, fill: false, pointBackgroundColor: [] },
+      { label: 'Turbidity (NTU)', data: turbData, borderColor: 'green', tension: 0.3, fill: false, pointBackgroundColor: [] }
+    ]
+  },
+  options: { plugins: { legend: { position: 'bottom' } }, scales: { y: { beginAtZero: true } } }
+});
+
+function fadeColors(count) {
+  return Array.from({length: count}, (_, i) => `rgba(0,0,0,${0.2 + 0.8*(i/(count-1 || 1))})`);
+}
+
+function updateChart(ph, temp, turb) {
+  const now = new Date();
+  const timeLabel = now.toLocaleTimeString();
+  labels.push(timeLabel);
+  phData.push(ph);
+  tempData.push(temp);
+  turbData.push(turb);
+
+  if (labels.length > maxPoints) {
+    labels.shift();
+    phData.shift();
+    tempData.shift();
+    turbData.shift();
+  }
+
+  const fade = fadeColors(labels.length);
+  trendChart.data.datasets.forEach(ds => ds.pointBackgroundColor = fade);
+  trendChart.update();
+}
+
+function updateStatusBar(text) { document.getElementById("status-bar").innerText = text; }
+
+function updatePH(value) {
+  document.getElementById("ph-value").innerText = value.toFixed(2);
+  const status = document.getElementById("ph-status");
+  if (value >= 6.5 && value <= 8.5) { status.innerText="Safe"; status.className="status text-success"; }
+  else { status.innerText="Unsafe"; status.className="status text-danger"; }
+}
+
+function updateTemp(value) {
+  document.getElementById("temp-value").innerText = value.toFixed(1)+"°C";
+  const status = document.getElementById("temp-status");
+  if (value >= 20 && value <= 30) { status.innerText="Safe"; status.className="status text-success"; }
+  else { status.innerText="Unsafe"; status.className="status text-danger"; }
+}
+
+function updateTurb(value) {
+  document.getElementById("turb-value").innerText = value.toFixed(1)+" NTU";
+  const status = document.getElementById("turb-status");
+  if (value <= 5) { status.innerText="Safe"; status.className="status text-success"; }
+  else { status.innerText="Unsafe"; status.className="status text-danger"; }
+}
+
+function updateSystemStatus(ph, temp, turb) {
+  const system = document.getElementById("system-status");
+  const lastUpdated = document.getElementById("last-updated");
+  if ((ph>=6.5&&ph<=8.5)&&(temp>=20&&temp<=30)&&(turb<=5)) { system.innerText="All Systems OK"; system.className="status text-success"; }
+  else { system.innerText="Attention Needed"; system.className="status text-danger"; }
+  lastUpdated.innerText = "Last updated: "+new Date().toLocaleTimeString();
+}
+
+// --- Simulation of readings ---
+//updateStatusBar("Simulating readings...");
+setInterval(() => {
+  const simulatedData = {
+    ph: (6 + Math.random()*3),        // 6 to 9
+    temp: (18 + Math.random()*15),    // 18°C to 33°C
+    turb: (1 + Math.random()*7)       // 1 to 8 NTU
+  };
+  updatePH(simulatedData.ph);
+  updateTemp(simulatedData.temp);
+  updateTurb(simulatedData.turb);
+  updateSystemStatus(simulatedData.ph, simulatedData.temp, simulatedData.turb);
+  updateChart(simulatedData.ph, simulatedData.temp, simulatedData.turb);
+}, 3000); // every 3 seconds
+
+</script>
+</body>
+</html>
