--- a/Web-dashboard/v2index.html
+++ b/Web-dashboard/v2index.html
@@ -3,202 +3,194 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BlueMetrics Dashboard</title>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <title>Smart AquaSense Dashboard</title>
+
+  <!-- Tailwind + DaisyUI -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            primary: "#2563eb", // blue-600
+            success: "#16a34a", // green-600
+            danger: "#dc2626",  // red-600
+          }
+        }
+      },
+      plugins: [daisyui],
+    };
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.js"></script>
+
+  <!-- ApexCharts -->
+  <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+
   <style>
     body {
-      font-family: 'Poppins', sans-serif;
-      background: #f5f7fa;
-      color: #333;
-      margin: 0;
-      padding: 0;
-    }
-    header {
-      background: #0077b6;
-      color: white;
-      text-align: center;
-      padding: 20px 0;
-      font-size: 1.8em;
-      letter-spacing: 1px;
-    }
-    .container {
-      width: 90%;
-      max-width: 1200px;
-      margin: 20px auto;
-    }
-    .cards {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-      gap: 20px;
-      margin-bottom: 40px;
-    }
-    .card {
-      background: white;
-      border-radius: 10px;
-      box-shadow: 0 3px 10px rgba(0,0,0,0.1);
-      padding: 20px;
-      text-align: center;
-    }
-    .card h3 {
-      margin-bottom: 10px;
-      font-size: 1.2em;
-      color: #0077b6;
-    }
-    .card p {
-      font-size: 1.8em;
-      font-weight: bold;
-    }
-    canvas {
-      background: white;
-      border-radius: 10px;
-      box-shadow: 0 3px 10px rgba(0,0,0,0.1);
-      padding: 10px;
-    }
-    footer {
-      text-align: center;
-      color: #555;
-      padding: 20px;
-      font-size: 0.9em;
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(to right, #f3f4f6, #f9fafb);
     }
   </style>
 </head>
-<body>
-  <header>💧 BlueMetrics Water Quality Dashboard</header>
-  <div class="container">
-    
-    <!-- Dashboard Cards -->
-    <div class="cards">
-      <div class="card">
-        <h3>Average pH</h3>
-        <p id="avgPh">--</p>
+<body class="min-h-screen flex flex-col">
+
+  <div class="container mx-auto px-4 py-6 flex-grow">
+    <div class="text-center mb-8">
+      <h1 class="text-3xl font-bold text-primary mb-1">💧 Smart AquaSense</h1>
+      <p class="text-gray-600">Real-time Water Quality Monitoring</p>
+      <p id="status-bar" class="text-sm text-gray-500 mt-2">Fetching data...</p>
+    </div>
+
+    <!-- Metric Cards -->
+    <div class="grid grid-cols-1 md:grid-cols-4 gap-4 mb-8">
+      <div class="card bg-white shadow-lg p-4 text-center">
+        <h2 class="text-sm text-gray-500">pH Level</h2>
+        <div id="ph-value" class="text-3xl font-semibold my-2">--</div>
+        <div id="ph-status" class="text-sm font-bold text-gray-600">--</div>
       </div>
-      <div class="card">
-        <h3>Average Turbidity</h3>
-        <p id="avgTurbidity">--</p>
+      <div class="card bg-white shadow-lg p-4 text-center">
+        <h2 class="text-sm text-gray-500">Temperature</h2>
+        <div id="temp-value" class="text-3xl font-semibold my-2">--</div>
+        <div id="temp-status" class="text-sm font-bold text-gray-600">--</div>
       </div>
-      <div class="card">
-        <h3>Average Temperature</h3>
-        <p id="avgTemp">--</p>
+      <div class="card bg-white shadow-lg p-4 text-center">
+        <h2 class="text-sm text-gray-500">Turbidity</h2>
+        <div id="turb-value" class="text-3xl font-semibold my-2">--</div>
+        <div id="turb-status" class="text-sm font-bold text-gray-600">--</div>
+      </div>
+      <div class="card bg-white shadow-lg p-4 text-center">
+        <h2 class="text-sm text-gray-500 mb-1">System Status</h2>
+        <div id="system-status" class="text-lg font-bold mb-2 text-gray-600">--</div>
+        <small id="last-updated" class="text-xs text-gray-500">Last updated: --</small>
       </div>
     </div>
 
-    <!-- Charts -->
-    <canvas id="phChart" height="100"></canvas>
-    <canvas id="turbidityChart" height="100" style="margin-top:30px;"></canvas>
-    <canvas id="tempChart" height="100" style="margin-top:30px;"></canvas>
+    <!-- Chart Section -->
+    <div class="card bg-white shadow-lg p-6">
+      <h3 class="text-lg font-semibold text-gray-700 mb-4">Recent Water Quality Trends (Last 10 Readings)</h3>
+      <div id="trendChart"></div>
+    </div>
   </div>
 
-  <footer>© 2025 BlueMetrics IoT Water Monitoring | Powered by ESP32 + Blynk + MySQL</footer>
+  <!-- Footer -->
+  <footer class="bg-gray-800 text-white text-center py-3 text-sm">
+    &copy; 2025 Designed & Developed by Praise R. Ziome
+  </footer>
 
   <script>
-    // Global Chart instances
-    let phChart, turbidityChart, tempChart;
+    const maxPoints = 10;
+    let labels = [], phData = [], tempData = [], turbData = [];
 
-    // Fetch live sensor data
-    async function fetchData() {
-      const res = await fetch("fetch_data.php");
-      const data = await res.json();
+    const chartOptions = {
+      chart: {
+        type: 'line',
+        height: 300,
+        toolbar: { show: false },
+      },
+      stroke: { curve: 'smooth', width: 3 },
+      grid: { borderColor: '#f1f1f1' },
+      colors: ['#3b82f6', '#f59e0b', '#10b981'], // blue, orange, green
+      series: [
+        { name: 'pH', data: [] },
+        { name: 'Temperature (°C)', data: [] },
+        { name: 'Turbidity (NTU)', data: [] },
+      ],
+      xaxis: { categories: [], labels: { style: { colors: '#6b7280' } } },
+      yaxis: { labels: { style: { colors: '#6b7280' } }, min: 0 },
+      legend: { position: 'bottom', labels: { colors: '#374151' } },
+      tooltip: { theme: 'light' }
+    };
 
-      const timestamps = data.map(d => d.timestamp);
-      const ph = data.map(d => parseFloat(d.ph));
-      const turbidity = data.map(d => parseFloat(d.turbidity));
-      const temperature = data.map(d => parseFloat(d.temperature));
+    const chart = new ApexCharts(document.querySelector("#trendChart"), chartOptions);
+    chart.render();
 
-      updateCharts(timestamps, ph, turbidity, temperature);
+    function updateChart(ph, temp, turb, timeLabel) {
+      labels.push(timeLabel);
+      phData.push(ph);
+      tempData.push(temp);
+      turbData.push(turb);
+      if (labels.length > maxPoints) {
+        labels.shift(); phData.shift(); tempData.shift(); turbData.shift();
+      }
+      chart.updateOptions({
+        xaxis: { categories: labels },
+        series: [
+          { name: 'pH', data: phData },
+          { name: 'Temperature (°C)', data: tempData },
+          { name: 'Turbidity (NTU)', data: turbData },
+        ]
+      });
     }
 
-    // Fetch daily averages
-    async function fetchDailyAvg() {
-      const res = await fetch("daily_avg.php");
-      const data = await res.json();
-
-      document.getElementById("avgPh").textContent = data.avg_ph || "--";
-      document.getElementById("avgTurbidity").textContent = data.avg_turbidity || "--";
-      document.getElementById("avgTemp").textContent = data.avg_temperature || "--";
-    }
-
-    // Update Chart.js visualizations
-    function updateCharts(timestamps, ph, turbidity, temperature) {
-      if (!phChart) {
-        phChart = new Chart(document.getElementById("phChart"), {
-          type: "line",
-          data: {
-            labels: timestamps,
-            datasets: [{
-              label: "pH Level",
-              data: ph,
-              borderColor: "#0077b6",
-              fill: false,
-              tension: 0.3
-            }]
-          },
-          options: {
-            responsive: true,
-            plugins: { legend: { position: "top" } },
-            scales: { x: { title: { display: true, text: "Timestamp" } } }
-          }
-        });
-
-        turbidityChart = new Chart(document.getElementById("turbidityChart"), {
-          type: "line",
-          data: {
-            labels: timestamps,
-            datasets: [{
-              label: "Turbidity (NTU)",
-              data: turbidity,
-              borderColor: "#00b4d8",
-              fill: false,
-              tension: 0.3
-            }]
-          },
-          options: {
-            responsive: true,
-            plugins: { legend: { position: "top" } },
-            scales: { x: { title: { display: true, text: "Timestamp" } } }
-          }
-        });
-
-        tempChart = new Chart(document.getElementById("tempChart"), {
-          type: "line",
-          data: {
-            labels: timestamps,
-            datasets: [{
-              label: "Temperature (°C)",
-              data: temperature,
-              borderColor: "#ff6b6b",
-              fill: false,
-              tension: 0.3
-            }]
-          },
-          options: {
-            responsive: true,
-            plugins: { legend: { position: "top" } },
-            scales: { x: { title: { display: true, text: "Timestamp" } } }
-          }
-        });
+    function updatePH(value) {
+      document.getElementById("ph-value").innerText = value.toFixed(2);
+      const status = document.getElementById("ph-status");
+      if (value >= 6.5 && value <= 8.5) {
+        status.innerText = "Safe"; status.className = "text-success font-bold";
       } else {
-        phChart.data.labels = timestamps;
-        phChart.data.datasets[0].data = ph;
-        turbidityChart.data.labels = timestamps;
-        turbidityChart.data.datasets[0].data = turbidity;
-        tempChart.data.labels = timestamps;
-        tempChart.data.datasets[0].data = temperature;
-
-        phChart.update();
-        turbidityChart.update();
-        tempChart.update();
+        status.innerText = "Unsafe"; status.className = "text-danger font-bold";
       }
     }
 
-    // Auto-refresh every 10 seconds
-    setInterval(() => {
-      fetchData();
-      fetchDailyAvg();
-    }, 10000);
+    function updateTemp(value) {
+      document.getElementById("temp-value").innerText = value.toFixed(1) + "°C";
+      const status = document.getElementById("temp-status");
+      if (value >= 20 && value <= 30) {
+        status.innerText = "Safe"; status.className = "text-success font-bold";
+      } else {
+        status.innerText = "Unsafe"; status.className = "text-danger font-bold";
+      }
+    }
 
-    // Initial load
-    fetchData();
-    fetchDailyAvg();
+    function updateTurb(value) {
+      document.getElementById("turb-value").innerText = value.toFixed(1) + " NTU";
+      const status = document.getElementById("turb-status");
+      if (value <= 5) {
+        status.innerText = "Safe"; status.className = "text-success font-bold";
+      } else {
+        status.innerText = "Unsafe"; status.className = "text-danger font-bold";
+      }
+    }
+
+    function updateSystemStatus(ph, temp, turb) {
+      const system = document.getElementById("system-status");
+      const lastUpdated = document.getElementById("last-updated");
+      if ((ph >= 6.5 && ph <= 8.5) && (temp >= 20 && temp <= 30) && (turb <= 5)) {
+        system.innerText = "All Systems OK";
+        system.className = "text-success font-bold";
+      } else {
+        system.innerText = "Attention Needed";
+        system.className = "text-danger font-bold";
+      }
+      lastUpdated.innerText = "Last updated: " + new Date().toLocaleTimeString();
+    }
+
+    async function fetchSensorData() {
+      try {
+        const res = await fetch("fetch_data.php");
+        const data = await res.json();
+
+        if (!data.length) {
+          document.getElementById("status-bar").innerText = "No data available";
+          return;
+        }
+
+        const latest = data[0];
+        updatePH(parseFloat(latest.ph));
+        updateTemp(parseFloat(latest.temperature));
+        updateTurb(parseFloat(latest.turbidity));
+        updateSystemStatus(latest.ph, latest.temperature, latest.turbidity);
+        updateChart(latest.ph, latest.temperature, latest.turbidity, latest.timestamp);
+        document.getElementById("status-bar").innerText = "Connected to Database ✓";
+      } catch (error) {
+        document.getElementById("status-bar").innerText = "Error fetching data";
+      }
+    }
+
+    setInterval(fetchSensorData, 10000);
+    fetchSensorData();
   </script>
+
 </body>
 </html>
